--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,6 +8,19 @@
   <meta name="theme-color" content="#000000" />
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
+  
+  @font-face {
+    font-family: 'AnzuFont';
+    src: url('/static/fonts/anzu.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  body {
+    font-family: 'AnzuFont', 'Gloria Hallelujah', cursive;
+  
+  }
+</style>
 
   body {
     background-color: #1e2b20;
